# Whatsapp-Integration

./: .gitignore  LICENSE  MANIFEST.in  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  tox.ini
.github/workflows/: ci.yml  publish.yml  testpypi.yml
_config/: asgi.py  celery.py  test_settings.py  urls.py  wsgi.py
docker/: Dockerfile  celery.Dockerfile
tools/: generate_pdf.py
whatsapp_integration/: __init__.py  admin.py  apps.py  commands.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
whatsapp_integration/rate_limiter/: __init__.py  lua_token_bucket.lua  lua_wrapper.py  token_bucket.py
whatsapp_integration/services/: __init__.py  whatsapp_service.py
whatsapp_integration/tests/: conftest.py  test_basic.py
