[build-system]
requires = ["setuptools>=61.0", "wheel", "build", "twine"]
build-backend = "setuptools.build_meta"

[tool.bumpver]
current_version = "0.1.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} → {new_version}"
tag_name = "v{new_version}"
tag_message = "Release {new_version}"
push = true

[tool.bumpver.file_patterns]
"setup.cfg" = [
    'version = {version}',
]
"whatsapp_integration/__init__.py" = [
    '__version__ = "{version}"',
]
