[metadata]
name = whatsapp_integration
version = 0.1.0
description = Reusable Django WhatsApp integration (Celery, rate-limiter, webhook, idempotency)
long_description = file: README.md
long_description_content_type = text/markdown
author = OFFSIDE INTEGRATED TECHNOLOGY (Somtochukwu Emmanuel)
author_email = offsideint@gmail.com
license = MIT
keywords = django,whatsapp,celery,webhook
classifiers =
    Programming Language :: Python :: 3
    Framework :: Django
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True
install_requires =
    Django>=3.2
    requests>=2.28
    celery>=5.2
    redis>=4.3
    psycopg2-binary>=2.9
    python-dotenv>=0.21
    reportlab>=4.0 ; extra for PDF generation (only needed for tools/generate_pdf.py)

[options.package_data]
* = *.lua
